Fix paragraph spacing in index

--- a/app/assets/stylesheets/_landing.css.scss
+++ b/app/assets/stylesheets/_landing.css.scss
@@ -20,10 +20,12 @@
   font-size: 6rem;
   font-family: $secondary-font;
   font-weight: 700;
+  margin-bottom: 2rem;
 }
 
 .homepage--intro {
   font-size: 2.2rem;
+  margin-bottom: 1.5rem;
 }
 
 
